--- a/css/profil/_pc_profil.scss
+++ b/css/profil/_pc_profil.scss
@@ -184,296 +184,6 @@
     }
 }
 
-footer{
-    display: grid;
-    grid-template-rows: 70vh 3vh 4vh;
-    grid-template-columns: 1fr 25% 1fr 30% 1fr 30% 1fr;
-    background-color: var(--bleufonce);
-    border-radius: 55px 55px 0 0 ;
-
-    
-    #colonne1{
-        display: grid;
-        grid-column: 2;
-        grid-row: 1;
-        grid-template-rows: 5% 10% 15% 15% 15% 20% 15%;
-        grid-template-columns: 1fr 25% 1fr;
-        color: white;
-
-        h2{
-            display: grid;
-            grid-row: 2;
-            grid-column: 1 / span 3;
-            color: white;
-            font-size: 2rem;
-        }
-
-        #reseaux1, #reseaux2, #reseaux3,#reseaux4, #texteReseaux{
-            margin-top: auto;
-            margin-bottom: auto;
-
-            h3{
-                font-family: "MavenRegular";
-            }
-        }
-
-        #reseaux1{
-            display: grid;
-            grid-row: 3;
-            grid-column: 1;
-        }
-
-        #icon1{
-            display: grid;
-            grid-row: 3;
-            grid-column: 3;
-        }
-        .fab {
-            border-radius: 50%;
-            background-color: var(--jauneclair);
-            width: 70px;
-            height: 70px;
-            margin: auto;
-        }
-    
-        .fa-facebook-square, .fa-twitter, .fa-instagram, .fa-youtube{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 40px;
-            color: black;
-        }
-
-        #reseaux2{
-            display: grid;
-            grid-row: 4;
-            grid-column: 1;
-        }
-
-        #icon2{
-            display: grid;
-            grid-row: 4;
-            grid-column: 3; 
-        }
-
-        #reseaux3{
-            display: grid;
-            grid-row: 5;
-            grid-column: 1;
-        }
-
-        #icon3{
-            display: grid;
-            grid-row: 5;
-            grid-column: 3; 
-        }
-
-        #reseaux4{
-            display: grid;
-            grid-row: 6;
-            grid-column: 1;
-        }
-
-        #icon4{
-            display: grid;
-            grid-row: 6;
-            grid-column: 3; 
-        }
-
-
-        #texteReseaux{
-            display: grid;
-            grid-row: 7;
-            grid-column: 1 / span 3;
-        }
-    }
-
-    #colonne2{
-        display: grid;
-        grid-column: 4;
-        grid-row: 1;
-        grid-template-rows: 5% 15% 11% 11% 11% 11% 11% 11% 11%;
-        grid-template-columns: 3fr 10% 1fr;
-        margin-left: auto;
-        margin-right: auto;
-        color: var(--jaune);
-
-        h2{
-            display: grid;
-            grid-row: 2;
-            grid-column: 1 / span 2;
-            color: white;
-            font-size: 2rem;
-        }
-
-        #page1, #page2, #page3, #page4, #page5, #page6, #page7{
-            margin-top: auto;
-            margin-bottom: auto;
-
-            h3{
-                font-family: "MavenRegular";
-            }
-        }
-
-        #page1{
-            display: grid;
-            grid-row: 3;
-            grid-column: 1;
-
-        }
-
-        #page2{
-            display: grid;
-            grid-row: 4;
-            grid-column: 1;
-        }
-
-        #page3{
-            display: grid;
-            grid-row: 5;
-            grid-column: 1;
-        }
-
-        #page4{
-            display: grid;
-            grid-row: 6;
-            grid-column: 1;
-        }
-
-        #page5{
-            display: grid;
-            grid-row: 7;
-            grid-column: 1;
-        }
-
-        #page6{
-            display: grid;
-            grid-row: 8;
-            grid-column: 1;
-        }
-
-        #page7{
-            display: grid;
-            grid-row: 9;
-            grid-column: 1;
-        }
-    }
-
-    #colonne3{
-        display: grid;
-        grid-column: 6;
-        grid-row: 1;
-        grid-template-rows: 5% 15% 25% 25% 30%;
-        grid-template-columns: 20% 1fr ;
-
-        h2{
-            display: grid;
-            grid-row: 2;
-            grid-column: 1 / span 2;
-            color: white;
-            font-size: 2rem;
-        }
-
-        #infos_site, #infos_adresse, #infos_tel{
-            margin-top: auto;
-            margin-bottom: auto;
-            color: white;
-
-            h3{
-                font-family: "MavenRegular";
-            }
-        }
-
-        #infos_tel{
-            display: grid;
-            grid-row: 3;
-            grid-column: 2;
-        }
-
-        #icon1{
-            display: grid;
-            grid-row: 3;
-            grid-column: 1;
-        }
-        .fas {
-            border-radius: 50%;
-            background-color: var(--jauneclair);
-            width: 70px;
-            height: 70px;
-            margin-top: auto;
-            margin-bottom: auto;
-            margin-right: auto;
-        }
-    
-        .fa-phone-alt, .fa-map-marker-alt, .fa-route{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 40px;
-            color: black;
-        }
-
-        #infos_adresse{
-            display: grid;
-            grid-row: 4;
-            grid-column: 2;
-        }
-
-        #icon2{
-            display: grid;
-            grid-row: 4;
-            grid-column: 1;
-        }
-
-        #infos_site{
-            display: grid;
-            grid-row: 5;
-            grid-column: 2;
-        }
-
-        #icon3{
-            display: grid;
-            grid-row: 5;
-            grid-column: 1;
-        }
-    }
-
-    #mentionslegales, #politique, #cookies, #plansite{
-        h3{
-            font-family: "MavenRegular";
-            font-weight: lighter;
-            color: white;
-            font-size: 15px;
-        }
-    }
-    #mentionslegales{
-        display: grid;
-        grid-row: 3;
-        grid-column: 2;
-    }
-
-    #politique{
-        display: grid;
-        grid-row: 3;
-        grid-column: 4;
-    }
-
-    #cookies{
-        display: grid;
-        grid-row: 3;
-        grid-column: 6;
-        text-align: right;
-    }
-
-    #plansite{
-        display: grid;
-        grid-column: 4;
-        grid-row: 3;
-        text-align: right;
-    }
-}
-
-
 
 @media (min-width: 1281px) {
     @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
@@ -574,9 +284,9 @@ footer{
         left: 150px;
     }
 
-    .show,
-    .icon,
-    input {
+    nav .show,
+    nav .icon,
+    #btn, #btn-1, #btn-2 {
         display: none;
     }
 
